# openenclave

.jenkins/: Jenkinsfile
cmake/: add_enclave_test.cmake  openenclave-config.cmake.in
docs/DesignDocs/cat/: my.md
docs/GettingStartedDocs/: GettingStarted.Windows.md
host/: CMakeLists.txt
host/sgx/: CMakeLists.txt
scripts/: install-windows-prereqs.ps1
tests/: CMakeLists.txt
tests/bigmalloc/enc/: enc.c
tests/host_verify/: README.md
tests/host_verify/host/: CMakeLists.txt
tests/mbed/: mbed.edl
tests/memory/enc/: stress.c
tests/tools/: CMakeLists.txt
tests/tools/oecert/: README.md
tests/tools/oecert/enc/: CMakeLists.txt  enc.cpp
tests/tools/oecert/host/: CMakeLists.txt
